# QuantumTravelingSalesmanSolver

./: .gitignore  README.md  pyproject.toml
code/: 2opt-solver.py  anas_murhaf_solver.py  bar_plot_all_results.py  bar_plot_results.py  my-quantum-solver.py  playground.ipynb  plot.py  problem.txt  run_all_tests.py  solution.txt  test100.txt  test20.txt  test30.txt
code/Anas_Murhaf_Solvers/: anas_murhaf_solver.py  backtrack.py  google-or-tools-solver.py
code/Global1A1_Solvers/: backtrack.py  dwave_solver.py  eqats_solver.py  plot.py
code/Utils/: bar_plot_all_results.py  bar_plot_results.py  box-plot-results.py  line_plot.py  parse_score.py  run_all_tests.py
data/n10/problems/: problem1.txt  problem6.txt  problem7.txt  problem8.txt
data/n10/solutions/2opt/: solution4.txt  solution8.txt
data/n10/solutions/anas_murhaf_solutions/: solution2.txt  solution5.txt  solution6.txt  solution8.txt
data/n10/solutions/qpu/: solution3.txt  (+1 more)
data/n20/: n20.txt
data/n20/anas_murhaf/: solution1.txt  solution10.txt  solution2.txt  solution3.txt  solution4.txt  solution5.txt  solution6.txt  solution7.txt  solution8.txt  solution9.txt
data/n20/dwave_solver/: solution1.txt  solution10.txt  solution2.txt  solution3.txt  solution4.txt  solution5.txt  solution6.txt  solution7.txt  solution8.txt  solution9.txt
data/n8/problems/: problem2.txt  problem3.txt  problem4.txt  problem7.txt  problem8.txt
data/n9/problems/: problem1.txt  problem2.txt  problem3.txt  problem6.txt
release/code/: README.md  anas_murhaf_solver.py  brute-force-solver.py  generate.py  plot.py  solution.txt
(+203 files in other folders)
